# polishcow.exe

./: .gitignore  CMakeLists.txt  CMakeSettings.json  README.md  polishcow.cpp  polishcow.h
